# FSD-July

./: 01_demo.ipynb  02_sample_agent.ipynb  03_agent_with_tools.ipynb  04_custom_tools_agent.ipynb  05_advanced_tools.ipynb  06_memory_agent.ipynb  aws_demo.ipynb  azure_demo.ipynb  google_demo.ipynb  groq_demo.ipynb  hf_gpt.ipynb  hf_local.ipynb  langchain_azure.ipynb  langchain_demo.ipynb  main.py  openai_demo.ipynb  pyproject.toml  requirements.txt
