[project]
name = "fsd-july"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.6.17",
    "google-genai>=2.10.0",
    "huggingface-hub>=1.23.0",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.2",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.9.8",
    "openai>=2.44.0",
    "pip-system-certs>=5.3",
    "python-dotenv>=1.2.2",
    "torch>=2.13.0",
    "transformers>=5.13.1",
    "truststore>=0.10.4",
]
